// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliased named import 1`] = `
"
import { theFirstFunc as aliasedFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import aliasedFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`aliased namespace import 1`] = `
"
import { thangs } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as thangs from './tests/testmodule/constants.js';
"
`;

exports[`bare import 1`] = `
"
import 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import 'testmodule';
"
`;

exports[`common js default import 1`] = `
"
import React from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from './commonjsmodule';
"
`;

exports[`common js default with named import 1`] = `
"
import React, { Component } from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from './commonjsmodule';
"
`;

exports[`confusing naming 1`] = `
"
import { FOO } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { mySecondFunc as FOO } from './tests/testmodule/mySecondFunc.js';
"
`;

exports[`default import 1`] = `
"
import myFirstFunc from 'testmodule/myFirstFunc'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFirstFunc from 'testmodule/myFirstFunc';
"
`;

exports[`default import with multiple named import 1`] = `
"
import init, { theFirstFunc, theSecondFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import init from './tests/testmodule/index.js';
import theFirstFunc from './tests/testmodule/myFirstFunc.js';
import { mySecondFunc as theSecondFunc } from './tests/testmodule/mySecondFunc.js';
"
`;

exports[`export-from default module by-name 1`] = `
"
import { byNameDefaultExportFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import byNameDefaultExportFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`export-from in single line 1`] = `
"
import { theInlineFirstFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import theInlineFirstFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`export-from un-aliased 1`] = `
"
import { myThirdFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myThirdFunc } from './tests/testmodule/myThirdFunc.js';
"
`;

exports[`glob import 1`] = `
"
import * as testmodule from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as testmodule from './tests/testmodule/index.js';
"
`;

exports[`import default module by-name then re-export 1`] = `
"
import { byNameDefaultImportFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import byNameDefaultImportFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`import module re-exported multiple times 1`] = `
"
import { theExportedSecondFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { mySecondFunc as theExportedSecondFunc } from './tests/testmodule/mySecondFunc.js';
"
`;

exports[`import module renamed multiple times 1`] = `
"
import { theSecondFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { mySecondFunc as theSecondFunc } from './tests/testmodule/mySecondFunc.js';
"
`;

exports[`import nested default export 1`] = `
"
import { defaultFirstFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import defaultFirstFunc from './tests/testmodule/defaultExport.js';
"
`;

exports[`import nested default export-from 1`] = `
"
import { byNameDefaultNestedFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import byNameDefaultNestedFunc from './tests/testmodule/defaultExport.js';
"
`;

exports[`multiple named imports 1`] = `
"
import { theFirstFunc, theSecondFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import theFirstFunc from './tests/testmodule/myFirstFunc.js';
import { mySecondFunc as theSecondFunc } from './tests/testmodule/mySecondFunc.js';
"
`;

exports[`single named import 1`] = `
"
import { theFirstFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import theFirstFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`transformDefaultImports = true: import nested default export 1`] = `
"
import { defaultFirstFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import defaultFirstFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`transformDefaultImports = true: import nested default export-from 1`] = `
"
import { byNameDefaultNestedFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import byNameDefaultNestedFunc from './tests/testmodule/myFirstFunc.js';
"
`;

exports[`unresolved default import 1`] = `
"
import React from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'reacty';
"
`;

exports[`unresolved default import with named import 1`] = `
"
import React, { Component } from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from 'reacty';
"
`;
